--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,4 @@ jobs:
           robot_threads: 2         
           run:
             robot replace_string.robot
+            robot TC_sem_qa_sample.robot
