--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,11 +14,17 @@ jobs:
     runs-on: ubuntu-latest
     name: Run Robot Framework Tests
     steps:
+      - name: Install python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      
       - name: Checkout
         uses: actions/checkout@v2
       - name: Robot Framework
         uses: joonvena/robotframework-docker-action@v1.0
         with:
           browser: 'firefox'
-          robot_threads: 2         
+          robot_threads: 2 
         
+         
