--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,8 @@ jobs:
       - name: Install python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      
+          pip install --upgrade robotframework-selenium2library
+          pip list
       - name: Checkout
         uses: actions/checkout@v2
       - name: Robot Framework
