--- a/requirements.txt
+++ b/requirements.txt
@@ -47,3 +47,90 @@ opensearch-py
 pyyaml                   # for devstack bamboo integration
 pytest-html
 selenium-wire
+appdirs                        1.4.4
+argcomplete                    2.0.0
+async-generator                1.10
+attrs                          22.2.0
+Authlib                        1.2.0
+certifi                        2022.12.7
+cffi                           1.15.1
+charset-normalizer             3.0.1
+click                          8.1.3
+colorama                       0.4.6
+cryptography                   39.0.1
+cumulusci                      3.73.0
+decorator                      5.1.1
+defusedxml                     0.7.1
+docutils                       0.16
+exceptiongroup                 1.1.0
+Faker                          17.0.0
+fs                             2.4.16
+github3.py                     3.2.0
+greenlet                       2.0.2
+GvGen                          1.0
+h11                            0.14.0
+idna                           3.4
+importlib-metadata             6.0.0
+importlib-resources            5.12.0
+jeepney                        0.8.0
+Jinja2                         3.1.2
+jsonpath-ng                    1.5.3
+jsonpath-rw                    1.4.0
+jsonschema                     4.17.3
+keyring                        23.0.1
+lxml                           4.9.2
+markdown-it-py                 2.1.0
+MarkupSafe                     2.1.2
+mdurl                          0.1.2
+natsort                        8.2.0
+outcome                        1.2.0
+packaging                      23.0
+pip                            23.0.1
+pipx                           1.1.0
+pkgutil_resolve_name           1.3.10
+ply                            3.11
+psutil                         5.9.4
+pycparser                      2.21
+pydantic                       1.10.5
+Pygments                       2.14.0
+PyJWT                          2.6.0
+pyrsistent                     0.19.3
+PySocks                        1.7.1
+python-baseconv                1.2.2
+python-dateutil                2.8.2
+pytz                           2022.7.1
+pywin32-ctypes                 0.2.0
+PyYAML                         6.0
+requests                       2.28.2
+requests-futures               1.0.0
+rich                           13.3.1
+robotframework                 6.0.2
+robotframework-jsonlibrary     0.5
+robotframework-lint            1.1
+robotframework-pabot           2.13.0
+robotframework-pythonlibcore   4.1.0
+robotframework-requests        0.9.4
+robotframework-seleniumlibrary 5.1.3
+robotframework-stacktrace      0.4.1
+rst2ansi                       0.1.5
+salesforce-bulk                2.2.0
+sarge                          0.1.7.post1
+SecretStorage                  3.3.3
+selenium                       3.141.0
+setuptools                     41.2.0
+simple-salesforce              1.11.4
+six                            1.16.0
+sniffio                        1.3.0
+snowfakery                     3.5.0
+sortedcontainers               2.4.0
+SQLAlchemy                     1.4.46
+trio                           0.22.0
+trio-websocket                 0.9.2
+typing_extensions              4.5.0
+unicodecsv                     0.14.1
+uritemplate                    4.1.1
+urllib3                        1.26.14
+userpath                       1.8.0
+wsproto                        1.2.0
+xmltodict                      0.13.0
+zipp                           3.13.0 
