--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install --upgrade robotframework-selenium2library
-          python -m pip install robotframework-jsonlibrary
+          python -m pip install -U robotframework-jsonlibrary
           python -m pip install robotframework-requests
           python -m pip install jsonpath-ng
           python -m pip install jsonpath-rw
